# torch_ros_test

./: CMakeLists.txt  README.md  package.xml
include/torch_ros/: torch_ros.h  torch_wo_ros.h
src/: torch_ros.cpp  torch_wo_ros.cpp
